[package]
name = "dodopow"
version = "0.1.0"
description = "Cuckoo Cycle-like PoW mechanism for CPU execution"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/dodopow"
repository = "https://github.com/krypt0nn/dodopow"
license = "MIT"
edition = "2024"

[dependencies]
rand_core = "0.9"

[dev-dependencies]
rand_chacha = "0.9"
